--- a/ShopmeProject/ShopmeWebParent/SpringAngularJSpoc/pom.xml
+++ b/ShopmeProject/ShopmeWebParent/SpringAngularJSpoc/pom.xml
@@ -1,23 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>com.shopme</groupId>
 		<artifactId>ShopmeWebParent</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
-		<!--<relativePath/> lookup parent from repository -->
+		<!--<relativePath/> --> <!--lookup parent from repository -->
 	</parent>
 
-	<artifactId>ShopmeFrontEnd</artifactId>
-
-	<name>ShopmeFrontEnd</name>
-	<description>FrontEnd</description>
+	<artifactId>SpringAngularJSpoc</artifactId>
+	<name>SpringAngularJSpoc</name>
+	<description>FrontEnd SpringAngularJS poc App</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
-		
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -26,12 +23,14 @@
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 
