--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 server.port=8080
 server.servlet.context-path=/ShopmeAdmin
 
-spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb
+spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=password
+spring.datasource.password=springstudent
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
