--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -3,12 +3,19 @@
 #spring.thymeleaf.check-template-location=false
 
 server.port=8080
-server.servlet.context-path=/ShopmeAdmin
+server.servlet.context-path=/
 
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# create data source properties
 spring.datasource.url=jdbc:mysql://localhost:3306/shopmedb?useSSL=false&allowPublicKeyRetrieval=true
 spring.datasource.username=root
 spring.datasource.password=springstudent
+#spring.datasource.username=ecommerceapp
+#spring.datasource.password=ecommerceapp
 
+
+# create jpa/hibernate properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
