corrected angJS project structure

--- a/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
+++ b/ShopmeProject/ShopmeWebParent/ShopmeBackEnd/src/main/resources/application.properties
@@ -3,7 +3,8 @@
 #spring.thymeleaf.check-template-location=false
 
 server.port=8080
-server.servlet.context-path=/
+#server.servlet.context-path=/
+spring.data.rest.base-path=/api
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
