--- a/ShopmeProject/ShopmeWebParent/pom.xml
+++ b/ShopmeProject/ShopmeWebParent/pom.xml
@@ -49,7 +49,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
+<!--		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>bootstrap</artifactId>
 			<version>4.0.0</version>
@@ -62,7 +62,7 @@
 		<dependency>
 			<groupId>org.webjars</groupId>
 			<artifactId>webjars-locator-core</artifactId>
-		</dependency>
+		</dependency>-->
 		<dependency>
 			<groupId>com.shopme</groupId>
 			<artifactId>ShopmeCommon</artifactId>
